@@ -879,7 +879,7 @@ public class TemplateBean implements Serializable
   private Boolean bchecker(Boolean mytest, boolean mydefault)
   {
     if (mytest == null)
-      return new Boolean(mydefault);
+      return Boolean.valueOf(mydefault);
     return mytest;
   }
 
