@@ -47,7 +47,6 @@ import org.sakaiproject.tool.assessment.facade.SectionFacade;
 import org.sakaiproject.tool.assessment.facade.TypeFacade;
 import org.sakaiproject.tool.assessment.services.PersistenceService;
 import org.sakaiproject.content.cover.ContentHostingService;
-import org.sakaiproject.content.api.ContentResourceEdit;
 
 /**
  * The AssessmentService calls the service locator to reach the
@@ -378,7 +377,7 @@ public void deleteAssessment(Id assessmentId)
 
   public boolean assessmentTitleIsUnique(String assessmentBaseId, String title, boolean isTemplate) {
     return PersistenceService.getInstance().getAssessmentFacadeQueries().
-           assessmentTitleIsUnique(new Long(assessmentBaseId), title, new Boolean(isTemplate));
+           assessmentTitleIsUnique(new Long(assessmentBaseId), title, Boolean.valueOf(isTemplate));
   }
 
   public List getAssessmentByTemplate(String templateId){
